--- a/tests/meson.build
+++ b/tests/meson.build
@@ -3,5 +3,6 @@ test_workdir = meson.current_source_dir() / '_build'
 subdir('conversion')
 subdir('cpp')
 subdir('deviceio')
+subdir('emscripten')
 subdir('filtering')
 subdir('generation')
